--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "socket.io": "^3.1.1",
     "uuidv4": "^6.2.6"
   }
 }
